bugfix: z-index-modal

--- a/src/app/subscribe-modal/subscribe-modal.component.scss
+++ b/src/app/subscribe-modal/subscribe-modal.component.scss
@@ -9,6 +9,7 @@
   transform: translate(-50%, -50%);
   padding: 40px;
   border-radius: 10px;
+  z-index: 5;
 
   .subscribe-modal-container{
     .title-container{
